--- a/.github/workflows/build_openapi.yaml
+++ b/.github/workflows/build_openapi.yaml
@@ -44,3 +44,29 @@ jobs:
       with:
         name: openapi.json
         path: ./docs/openapi/openapi.json
+        
+    - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Download artifact from the latest workflow run
+        uses: actions/download-artifact@v3
+        with:
+          name: openapi.json  # Name of the artifact you want to download
+          path: ./openapi/openapi.json  # Directory where the artifact will be downloaded
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16'  # Ensure this matches the Node.js version required by Docusaurus
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build Docusaurus site
+        run: npm run build
+
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./build  # Ensure this matches the build output directory of Docusaurus
