deploy: 763d287f260e5f17bb7e0c3404590056d88e54de

--- a/redocusaurus/using-single-yaml.yaml
+++ b/redocusaurus/using-single-yaml.yaml
@@ -12,7 +12,10 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Pod'
+              items:
+                $ref: '#/components/schemas/Pod'
+              type: array
+              title: Pod
         required: true
       responses:
         '200':
