--- a/.github/workflows/build_openapi.yaml
+++ b/.github/workflows/build_openapi.yaml
@@ -26,11 +26,6 @@ jobs:
     - name: Run script to generate OpenAPI JSON
       run: python example/create_openapi.py
 
-    - name: Upload OpenAPI JSON as an artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: openapi.json
-        path: ./docs/openapi/openapi.json
     - name: Upload json to release
       uses: svenstaro/upload-release-action@v2
       with:
@@ -40,40 +35,6 @@ jobs:
         tag: ${{ github.ref }}
         overwrite: true
         body: "OpenAPI spec for plugin REST" 
-  
-  update-doc:
-    needs: update-openapi
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-
-    - name: Install dependencies
-      run: |
-        rm ./docs/openapi/openapi.json
-
-    - name: Download artifact from the latest workflow run
-      uses: actions/download-artifact@v4
-      with:
-        name: openapi.json  # Name of the artifact you want to download
-        path: ./docs/openapi  # Directory where the artifact will be downloaded
-
-    - name: Set up Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '22'  # Ensure this matches the Node.js version required by Docusaurus
-
-    - name: Install dependencies
-      working-directory: ./docs  # Change to the directory where package.json is located
-      run: npm install
-
-    - name: Build Docusaurus site
-      working-directory: ./docs  # Change to the directory where package.json is located
-      run: npm run build
-
-    - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./docs/build   # Ensure this matches the build output directory of Docusaurus
+    
+  Trigger-Docusaurus-Update:
+    uses: ./.github/workflows/build_docusaurus.yaml
